# llm-data-extractor

./: Pipenv  Pipfile  README.md  pyproject.toml  testing.ipynb
llm_data_extractor/pipeline/: __init__.py  pipeline.py
llm_data_extractor/view/: frontend.py
